# JazzLight

./: .gitignore  Cargo.toml  File.jzl  README.md  file.jazz  file.jzl  file2.jazz
bootstrap/: Lex.jazz  Reader.jzl
examples/: Factorial.jzl  api.rs  array.jazz  array_std.jazz  arrays.jazz  factorial.jazz  file.j  graphics.jzl  hashtable.jazz  hello.jzl  imports.jazz  iter.jazz  lexer.jzl  map.jzl  math.jazz  modules.jazz  neural-network  neural-network.jzl  numerics.jazz  object.jazz  switch.jazz  threads.jazz
gc-rs/gc/src/: lib.rs
jazz-vm/: Cargo.toml
jazz-vm/src/: builtins.rs  fields.rs  hash.rs  lib.rs  main.rs  module.rs  opcode.rs  value.rs  vm.rs
nabox/: Cargo.toml
nabox/src/: builtins.rs  fields.rs  lib.rs  main.rs  module.rs  opcode.rs  value.rs  vm.rs
programs/: decoder.jazz
src/: acell.rs  ast.rs  builtins.rs  bytecode.rs  codegen.rs  compile.rs  compiler.rs  decoder.rs  emit_file.rs  gc.rs  interner.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  map.rs  msg.rs  parser.rs  reader.rs  runtime.rs  thread.rs  token.rs  value.rs  writer.rs
src/additional/: ui.rs
src/builtins/: array.rs  common.rs  function.rs  math.rs  number.rs  object.rs
src/compiler/: ast.rs  generator.rs  lexer.rs  mod.rs  msg.rs  parser.rs  reader.rs  token.rs
src/interpreter/: mod.rs  runtime.rs  value.rs
src/ngc/: bump.rs  copying.rs  mod.rs
src/vm/: README.md  mod.rs  opcodes.rs  runtime.rs  value.rs
src/vm/codegen/: README.md  basicblock.rs  mod.rs
src/vm/runtime/: array.rs  math.rs  object.rs
std/: Array.j  Array.jazz  Array.jzl  Char.jazz  Hashtable.jazz  Lexing  Lexing.jzl  List  List.jazz  List.jzl  Map  Map.jzl  Reader.jazz  array.jazz  cmp.jazz  console.jazz  fmt  fmt.jzl  map.jazz  math.jazz  option.jazz  prelude.jazz  sdl2.jazz  string.jazz
std-dl/: Cargo.toml  README.md
std-dl/src/: lib.rs
std/numerics/: vector2.jazz
vm/: Cargo.toml
vm/old/: lib.rs
vm/old/assembly/: mod.rs
vm/old/assembly/x64/: mod.rs  reg.rs
vm/src/: api.rs  atomic_ref.rs  builtins.rs  frame.rs  gc.rs  hash.rs  instruction.rs  interp.rs  lib.rs  main.rs  opcode.rs  reader.rs  value.rs  vm.rs  writer.rs
vm/src/builtins/: io.rs
