[package]
name = "jazzlight"
version = "0.1.0"
authors = ["Adel Prokurov <adel.prokurov@protonmail.com>"]
edition = "2018"

[dependencies]
hmap = "0.1"
structopt = "0.2"
time = "0.1.42"
byteorder = "1.3.2"
libc = "0.2"
wrc = "0.4"
cgc = {git = "https://github.com/playxe/cgc"}
parking_lot = "0.9"
lazy_static = "1.3"
rustyline = "5.0"
smallvec = {version = "0.6",features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.0"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser","memoryapi","errhandlingapi"] }
kernel32-sys = "0.2"
[profile.release]
lto = true
codegen-units = 1
