[package]
name = "jazzvm"
version = "0.1.0"
authors = ["Adel Prokurov <adel.prokurov@protonmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3"
parking_lot = "0.7.1"
fnv = "1.0"
libloading = "0.5.0"
libc = "0.2"
borrowed-thread = "0.1"
jazz-jit = {git = "https://github.com/jazz-lang/jazz-jit"}