[package]
name = "nabox"
version = "0.1.0"
authors = ["Adel Prokurov <adel.prokurov@protonmail.com>"]
edition = "2018"
description = "VM for JazzLight programming language"

[dependencies]
lazy_static = "1.3"
parking_lot = "0.8"
fnv = "1.0"
libloading = "0.5.1"
libc = "0.2"
borrowed-thread = "0.1"
byteorder = "1.3"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 4
panic = 'abort'