[package]
name = "jazzlight"
version = "0.1.0"
authors = ["Adel Prokurov <adel.prokurov@protonmail.com>"]
edition = "2018"

[dependencies]
time = "0.2"
parking_lot = "0.9"
lazy_static = "1.4"
rand = "0.7"
mimalloc = "0.1"
hashlink = "0.3"
byteorder = "1.3"
libloading = "0.5"
mopa = "0.2"
structopt = "0.3"

[profile.release]
lto = true
codegen-units = 8
panic = 'abort'